Update build-agent to handle build-info in vnext
The build-agent can now route build-info build processes to
a downstrea octopus-deploy server.